--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <body>
     <div class="container">
       <div>
-        <h1 class="header_text">Do you wanna go out with me?</h1>
+        <h1 class="header_text">Do you wanna go out with me this saturday?</h1>
       </div>
  
       <div class="gif_container">
         <img
-          src="img/cute-please.gif"
+          src="cute-please.gif"
           alt="Cute animated illustration"
         />
       </div>
